tests/error/runtime_exception_in_solution/identity.nim
func identity*(n: int): int =
  raise newException(ValueError, "myValueError")
